# AT2-ADML-24996124

./: Makefile  README.md  pyproject.toml
at2_adml_24996124/: __init__.py  dataset.py  features.py  plots.py
at2_adml_24996124/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/forecasting/: base_prophet_forecast.pkl
notebooks/forecasting/: shrestha_dipesh-24996124-forecasting-prophet-tuning-final.ipynb
notebooks/predictive/: shrestha_dipesh-24996124-predictive-Feature-Extraction.ipynb  shrestha_dipesh-24996124-predictive-FinalExperimentation_XGBoost.ipynb  shrestha_dipesh-24996124-predictive-FinalExperimentation_decisionTree.ipynb  shrestha_dipesh-24996124-predictive-baseline.ipynb
src/: utils.py
src/data/: sets.py
src/features/: preprocessing.py
src/models/: evaluation_metric.py  model.py
src/visualization/: plots.py
