[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "at2_adml_24996124"
version = "0.0.1"
description = "Applying Machine Learning as a Service for Time series forcasting for sales of a store"
authors = [
  { name = "Dipesh Shrestha" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["at2_adml_24996124"]
force_sort_within_sections = true
